[gd_scene load_steps=48 format=3 uid="uid://077fpjam3rlw"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_e0tat"]
[ext_resource type="Script" path="res://scenes/component/velocity_component/velocity_component.gd" id="3_umteq"]
[ext_resource type="Script" path="res://scenes/player/player_camera.gd" id="4_feodf"]
[ext_resource type="Script" path="res://scenes/player/camera_effect_head_wobble.gd" id="4_nfr6p"]
[ext_resource type="Script" path="res://scenes/player/move_speed_upgrade_handler.gd" id="4_xp3sh"]
[ext_resource type="Script" path="res://scenes/player/camera_effect_landing.gd" id="5_1a0oq"]
[ext_resource type="Resource" uid="uid://bnojv12xi1uio" path="res://scenes/upgrade/move_speed/default_boots.tres" id="5_ggm6b"]
[ext_resource type="Script" path="res://scenes/player/tool/viewmodel_sway.gd" id="6_t0wwe"]
[ext_resource type="Script" path="res://scenes/player/tool/player_tool_inventory.gd" id="7_id8rm"]
[ext_resource type="PackedScene" uid="uid://dqwotfhhj3x3" path="res://scenes/player/tool/broom/broom_strong.tscn" id="11_fl86n"]
[ext_resource type="Script" path="res://scenes/player/player_footstep_manager.gd" id="11_le046"]
[ext_resource type="PackedScene" uid="uid://diie8gejji6lq" path="res://scenes/player/tool/broom/leaf_blower.tscn" id="11_rfdeu"]
[ext_resource type="PackedScene" uid="uid://duvqdrsvvonkd" path="res://scenes/player/tool/broom/broom.tscn" id="12_gpv6h"]
[ext_resource type="Script" path="res://addons/bmod/scripts/nodes/sound_effect_player.gd" id="12_ws1qt"]
[ext_resource type="Script" path="res://addons/bmod/scripts/resources/multi_sound_effect_item.gd" id="13_qnret"]
[ext_resource type="PackedScene" uid="uid://bmmipwucjq6as" path="res://scenes/player/tool/camera/camera.tscn" id="14_yl1fb"]
[ext_resource type="Script" path="res://addons/bmod/scripts/resources/sound_effect_meta.gd" id="16_7g8ho"]
[ext_resource type="AudioStream" uid="uid://cols2ungsaby3" path="res://assets/audio/sfx_concrete_footstep_1.ogg" id="16_s6ylb"]
[ext_resource type="Script" path="res://addons/bmod/scripts/resources/multi_sound_effect.gd" id="17_2xuu8"]
[ext_resource type="AudioStream" uid="uid://b7ql34t7tq08r" path="res://assets/audio/sfx_concrete_footstep_2.ogg" id="17_a7lx8"]
[ext_resource type="AudioStream" uid="uid://cqsb4q45tck0t" path="res://assets/audio/sfx_grass_footstep_1.ogg" id="18_r1c8k"]
[ext_resource type="AudioStream" uid="uid://f1dd6esiymal" path="res://assets/audio/sfx_concrete_footstep_3.ogg" id="18_t1y7a"]
[ext_resource type="Script" path="res://addons/bmod/scripts/resources/single_sound_effect.gd" id="19_n020x"]
[ext_resource type="AudioStream" uid="uid://cqup4dy1a5ju" path="res://assets/audio/sfx_grass_footstep_2.ogg" id="19_r8fuj"]
[ext_resource type="AudioStream" uid="uid://snikjpt8nwa5" path="res://assets/audio/sfx_concrete_footstep_4.ogg" id="19_w7vxr"]
[ext_resource type="AudioStream" uid="uid://cbo87es8yv0pd" path="res://assets/audio/sfx_grass_footstep_3.ogg" id="20_x8ofr"]
[ext_resource type="AudioStream" uid="uid://cc5ws3eha2jlq" path="res://assets/audio/sfx_grass_footstep_4.ogg" id="21_l063t"]
[ext_resource type="Script" path="res://scenes/player/player_oob_rescue.gd" id="24_6ndkg"]
[ext_resource type="AudioStream" uid="uid://qqrgriis5oeu" path="res://assets/audio/sfx_player_jump_1.ogg" id="28_b26d0"]
[ext_resource type="AudioStream" uid="uid://ckvfw1v4i7yov" path="res://assets/audio/sfx_player_land_1.ogg" id="30_u8teo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dq522"]

[sub_resource type="Resource" id="Resource_moufm"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("16_s6ylb")
weight = 1

[sub_resource type="Resource" id="Resource_xggfh"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("17_a7lx8")
weight = 1

[sub_resource type="Resource" id="Resource_ofygo"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("18_t1y7a")
weight = 1

[sub_resource type="Resource" id="Resource_a17ui"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("19_w7vxr")
weight = 1

[sub_resource type="Resource" id="Resource_2yqqe"]
script = ExtResource("16_7g8ho")
volume_db = -12.0
volume_variation_db = 0.0
pitch_scale = 1.0
pitch_variation = 0.2

[sub_resource type="Resource" id="Resource_gd8lq"]
script = ExtResource("17_2xuu8")
effect_pool = Array[ExtResource("13_qnret")]([SubResource("Resource_moufm"), SubResource("Resource_xggfh"), SubResource("Resource_ofygo"), SubResource("Resource_a17ui")])
mode = 0
meta = SubResource("Resource_2yqqe")
play = false
play_on_change = false

[sub_resource type="Resource" id="Resource_ar33j"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("18_r1c8k")
weight = 1

[sub_resource type="Resource" id="Resource_661y3"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("19_r8fuj")
weight = 1

[sub_resource type="Resource" id="Resource_5r3v3"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("20_x8ofr")
weight = 1

[sub_resource type="Resource" id="Resource_126hh"]
script = ExtResource("13_qnret")
audio_stream = ExtResource("21_l063t")
weight = 1

[sub_resource type="Resource" id="Resource_a7tey"]
script = ExtResource("16_7g8ho")
volume_db = -10.0
volume_variation_db = 0.0
pitch_scale = 1.0
pitch_variation = 0.0

[sub_resource type="Resource" id="Resource_qopjh"]
script = ExtResource("17_2xuu8")
effect_pool = Array[ExtResource("13_qnret")]([SubResource("Resource_ar33j"), SubResource("Resource_661y3"), SubResource("Resource_5r3v3"), SubResource("Resource_126hh")])
mode = 0
meta = SubResource("Resource_a7tey")
play = false
play_on_change = false

[sub_resource type="Resource" id="Resource_owuml"]
script = ExtResource("16_7g8ho")
volume_db = -9.0
volume_variation_db = 0.0
pitch_scale = 1.1
pitch_variation = 0.1

[sub_resource type="Resource" id="Resource_kilrq"]
script = ExtResource("19_n020x")
audio_stream = ExtResource("28_b26d0")
meta = SubResource("Resource_owuml")
play = false
play_on_change = false

[sub_resource type="Resource" id="Resource_1it1s"]
script = ExtResource("16_7g8ho")
volume_db = -12.0
volume_variation_db = 0.0
pitch_scale = 1.0
pitch_variation = 0.1

[sub_resource type="Resource" id="Resource_18oov"]
script = ExtResource("19_n020x")
audio_stream = ExtResource("30_u8teo")
meta = SubResource("Resource_1it1s")
play = false
play_on_change = false

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("velocity_component", "camera", "camera_origin", "camera_effect_landing", "cleaning_raycast", "inventory", "move_speed_upgrade_handler", "audio_jump", "audio_land", "footstep_manager")]
floor_block_on_wall = false
script = ExtResource("1_e0tat")
velocity_component = NodePath("VelocityComponent")
jump_strength = 5.0
jump_buffer_size = 10
sprint_jumping_boost_amount = 4.0
sprint_jumping_falloff = 2.0
look_down_slowdown_threshold = 45.0
camera = NodePath("CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D")
camera_origin = NodePath("CameraOrigin")
camera_effect_landing = NodePath("CameraOrigin/CameraWobble/CameraEffectLanding")
cleaning_raycast = NodePath("CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/CleaningRayCast3D")
jump_cleaning_radius = 0.8
sprint_cleaning_cooldown = 0.1
sprint_cleaning_radius = 0.5
inventory = NodePath("PlayerToolInventory")
move_speed_upgrade_handler = NodePath("VelocityComponent/MoveSpeedUpgradeHandler")
audio_jump = NodePath("AudioJump")
audio_land = NodePath("AudioLand")
footstep_manager = NodePath("FootstepManager")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dq522")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("3_umteq")
speed = 4.0
smooth_toggle = true
accel_weight = 4.0
decel_weight = 4.0

[node name="MoveSpeedUpgradeHandler" type="Node" parent="VelocityComponent" node_paths=PackedStringArray("velocity_component")]
script = ExtResource("4_xp3sh")
current_upgrade = ExtResource("5_ggm6b")
velocity_component = NodePath("..")

[node name="PlayerOobRescue" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("24_6ndkg")
player = NodePath("..")
trouble_threshold = 5.0

[node name="PlayerToolInventory" type="Node" parent="." node_paths=PackedStringArray("tool_origin")]
script = ExtResource("7_id8rm")
tool_origin = NodePath("../CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin/ViewmodelSway")
swap_cooldown = 0.15

[node name="CameraOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.685927, 0)

[node name="CameraWobble" type="Node3D" parent="CameraOrigin" node_paths=PackedStringArray("velocity_component", "player")]
script = ExtResource("4_nfr6p")
velocity_component = NodePath("../../VelocityComponent")
player = NodePath("../..")
position_offset = Vector3(0, 0.025, 0)
position_speed = 12.0
rotation_degrees_offset = Vector3(0, 0, 0.15)
rotation_speed = 6.0

[node name="CameraEffectLanding" type="Node3D" parent="CameraOrigin/CameraWobble"]
script = ExtResource("5_1a0oq")
direction = Vector3(0, -0.15, 0)

[node name="Camera3D" type="Camera3D" parent="CameraOrigin/CameraWobble/CameraEffectLanding"]
process_mode = 3
near = 0.003
far = 1024.0
script = ExtResource("4_feodf")

[node name="ViewmodelOrigin" type="Node3D" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D"]
process_mode = 1

[node name="ViewmodelSway" type="Node3D" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin" node_paths=PackedStringArray("player")]
script = ExtResource("6_t0wwe")
sway_strength = 0.1
player = NodePath("../../../../../..")

[node name="Broom" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin/ViewmodelSway" instance=ExtResource("12_gpv6h")]

[node name="BroomStrong" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin/ViewmodelSway" instance=ExtResource("11_fl86n")]

[node name="LeafBlower" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin/ViewmodelSway" instance=ExtResource("11_rfdeu")]

[node name="Camera" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D/ViewmodelOrigin/ViewmodelSway" instance=ExtResource("14_yl1fb")]

[node name="CleaningRayCast3D" type="RayCast3D" parent="CameraOrigin/CameraWobble/CameraEffectLanding/Camera3D"]
enabled = false
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(0.393541, 0.550201, 3.85046e-07, 1)
debug_shape_thickness = 3

[node name="FootstepManager" type="Node3D" parent="." node_paths=PackedStringArray("player", "velocity_component", "raycast", "concrete_footstep", "grass_footstep")]
script = ExtResource("11_le046")
player = NodePath("..")
velocity_component = NodePath("../VelocityComponent")
raycast = NodePath("RayCast3D")
step_rate = 2.1
concrete_footstep = NodePath("ConcreteFootstep")
grass_footstep = NodePath("GrassFootstep")

[node name="ConcreteFootstep" type="Node" parent="FootstepManager"]
script = ExtResource("12_ws1qt")
sound_effect = SubResource("Resource_gd8lq")
bus = &"SFX"
max_polyphony = 4

[node name="GrassFootstep" type="Node" parent="FootstepManager"]
script = ExtResource("12_ws1qt")
sound_effect = SubResource("Resource_qopjh")
bus = &"SFX"
max_polyphony = 4

[node name="RayCast3D" type="RayCast3D" parent="FootstepManager"]
enabled = false
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(1, 1, 1, 1)
debug_shape_thickness = 5

[node name="AudioJump" type="Node" parent="."]
script = ExtResource("12_ws1qt")
sound_effect = SubResource("Resource_kilrq")
bus = &"SFX"

[node name="AudioLand" type="Node" parent="."]
script = ExtResource("12_ws1qt")
sound_effect = SubResource("Resource_18oov")
bus = &"SFX"
